<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerInParent="true"
              android:layout_marginTop="70dp"
              android:orientation="vertical"
              android:padding="10dp">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_header"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/header"/>

    </RelativeLayout>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/et_username_value"
            android:inputType="text"/>

        <!--<Spinner-->
            <!--android:id="@+id/spinner"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_toRightOf="@+id/et_username"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

        <!--</Spinner>-->

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/et_password_value"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_color"
        android:text="@string/btn_submit_value"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/tv_register_value"/>

        <TextView
            android:id="@+id/tv_promise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/tv_promise_value"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/tv_register"
            android:layout_centerInParent="true"
            android:gravity="bottom"
            android:text="@string/tv_forget_value"
            android:textSize="15sp"/>

        <!--<ProgressBar-->
            <!--android:id="@+id/progressbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/tv_register"-->
            <!--android:visibility="gone"/>-->

    </RelativeLayout>

</LinearLayout>