<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e5e1e1"
                android:orientation="vertical">

    <Button
        android:id="@+id/btn_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_notifications_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_notifications"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_donotdisturb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_donotdisturb_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/btn_donotdisturb"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_chat_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_chat"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_privacy_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_privacy"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_general_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_general"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_myaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view5"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_myaccount_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_myaccount"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view6"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_facebook_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_facebook"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view7"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_twitter"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_twitter"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_about_value"
        android:textSize="15sp"/>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/btn_about"
        android:background="@android:color/darker_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view8"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/btn_logout_value"
        android:textSize="15sp"/>

</RelativeLayout>