<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="10dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<ImageView-->
            <!--android:id="@+id/modify_back"-->
            <!--android:src="@drawable/back"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

        <!--<TextView-->
            <!--android:layout_centerInParent="true"-->
            <!--android:text="修改密码"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

    <!--</RelativeLayout>-->

    <!--<View-->
        <!--android:background="@android:color/darker_gray"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"/>-->

    <RelativeLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_newPassword"
            android:hint="@string/et_newPassword_value"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/et_sureNewPassword"
            android:inputType="textPassword"
            android:hint="@string/et_surepassword_value"
            android:layout_below="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_modify"
            android:background="@drawable/btn_color"
            android:layout_below="@+id/et_sureNewPassword"
            android:textSize="20sp"
            android:text="@string/btn_submit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>